--- a/index.html
+++ b/index.html
@@ -19,6 +19,12 @@
     </nav> 
     </div> 
 
+    <!-- <section id="bookNow">
+        <template class="bookingTemplate">
+            <div class="bookingTest"></div>
+        </template>
+    </section> -->
+
     <section id="intro">
         <template class="introTemplate">
             <img src="" alt="" class="heroImg">
