created booking button + a little styling

--- a/index.html
+++ b/index.html
@@ -25,8 +25,9 @@
 
     <section id="intro">
         <template class="introTemplate">
-            <img src="" alt="" class="heroImg">
             <img src="" alt="" class="banner">
+            <img src="" alt="" class="heroImg">
+            <button class="bookBtn">Click to book!</button>
             <h3 class="introTitle"></h3>
             <p class="introText"></p>
         </template>
