--- a/faq.html
+++ b/faq.html
@@ -23,10 +23,13 @@
     </nav> 
     </div> 
 
-    <template class="faqTemplate">
-        <h4 class="faqQuestion"></h3>
-        <p class="faqAnswer"></p>
-    </template>
+    <section id="faq">
+        <template class="faqTemplate">
+            <h4 class="faqQuestion"></h3>
+            <p class="faqAnswer"></p>
+        </template>
+        <section id="#faqList"></section>
+    </section>
 
     <div id="bottomNavigation">
         <template class="contactTemplate">
