added weather & gallery on landing page

--- a/index.html
+++ b/index.html
@@ -66,6 +66,20 @@
         </template>
     </section>
 
+    <section id="weather">
+        <h3 class="degrees">11°C</h3>
+        <img src="" class="weather">Cloudy/rainy</h3>
+        <h4 class="weatherSentence">Experience Copenhagen through the lens of a Dane today!</h3>
+    </section>
+
+    <section id="gallery">
+        <template class="galleryTemplate">
+            <img src="" alt="" class="galleryImg1">
+            <img src="" alt="" class="galleryImg2">
+            <img src="" alt="" class="galleryImg3">
+        </template>
+    </section>
+
     <div id="bottomNavigation">
         <template class="contactTemplate">
             <!-- season openings -->
