Faq fetch questions and answers

--- a/faq.html
+++ b/faq.html
@@ -25,10 +25,10 @@
 
     <section id="faq">
         <template class="faqTemplate">
-            <h4 class="faqQuestion"></h3>
+            <h4 class="faqQuestion"></h4>
             <p class="faqAnswer"></p>
         </template>
-        <section id="#faqList"></section>
+        <section id="faqList"></section>
     </section>
 
     <div id="bottomNavigation">
