Faq accordion expand one by one and expand all

--- a/faq.html
+++ b/faq.html
@@ -24,9 +24,12 @@
     </div> 
 
     <section id="faq">
+        <button id="expandFaq">Expand/Collapse all</button>
         <template class="faqTemplate">
-            <h4 class="faqQuestion"></h4>
-            <p class="faqAnswer"></p>
+            <div class="oneQuestion">
+                <h4 class="faqQuestion"></h4>
+                <p class="faqAnswer"></p>
+            </div>
         </template>
         <section id="faqList"></section>
     </section>
