actiaved button evt listener

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <template class="introTemplate">
             <img src="" alt="" class="banner">
             <img src="" alt="" class="heroImg">
-            <button class="bookBtn">Click to book!</button>
+            <!-- <button class="bookBtn">Click to book!</button> -->
             <h3 class="introTitle"></h3>
             <p class="introText"></p>
         </template>
@@ -94,6 +94,14 @@
             <p class="contactTitle4"></p>
         </template>    
     </div>
+
+<div id="bookingSection">
+    <button class="bookBtn">Click to book!</button>
+    <div id="bookingWindow">
+       
+
+    </div>
+</div>
 
     <script src="script.js"></script>
 </body>
