booking animation set together with button

--- a/index.html
+++ b/index.html
@@ -95,17 +95,16 @@
         </template>    
     </div>
 
-    <button class="bookBtn">Click to book!</button>
-    <div id="bookingSection" class="overlay">
-        <div id="bookingWindow">
-            
+    <div class="bookingArea">
+        <div id="bookingOverlay" class="overlay">
+            <button id="bookBtn">Click to book!</button>
             <div class="overlay-content">
-                <a href="">teste</a>
-                <p class="overlayt">Booking steps</p>
+                <p>Booking steps</p>
+                <p>bla bla bla</p>
+                <p>bla bla bla bla</p>
             </div>
         </div>
     </div>
-
     
     <script src="script.js"></script>
 </body>
