--- a/index.html
+++ b/index.html
@@ -35,22 +35,14 @@
 
     <section id="trips">
         <template class="tripTemplate">
-            <!-- THE LANDMARKS -->
-            <h3 class="tripTitle1"></h3>
-            <h3 class="duration1"></h3>
-            <img src="" alt="" class="tripImg1">
-            <p class="tripText1"></p>
-            <!-- HIDDEN GEMS -->
-            <h3 class="tripTitle2"></h3>
-            <h3 class="duration2"></h3>
-            <img src="" alt="" class="tripImg2">
-            <p class="tripText2"></p>
-            <!-- THE DIANA -->
-            <h3 class="tripTitle3"></h3>
-            <h3 class="duration3"></h3>
-            <img src="" alt="" class="tripImg3">
-            <p class="tripText3"></p>
+            <div id="singleTripArea">
+                <h3 class="tripTitle"></h3>
+                <h3 class="duration"></h3>
+                <img src="" alt="" class="tripImg">
+                <p class="tripText"></p>
+            </div>
         </template>
+        <div id="tripArea"></div>
     </section>
 
     <section id="tours">
