connected all booking steps through NEXT btn

--- a/index.html
+++ b/index.html
@@ -134,8 +134,8 @@
                         required>
                 </form>
                 <!-- buttons -->
-                <button id="previous">Previous</button>
-                <button id="next">Next</button>
+                <button class="previous hide">Previous</button>
+                <button class="next">Next</button>
                 <!-- PERSONAL DATA -->
                 <form class="personalData step2">
                     <label for="name">Full Name</label>
@@ -218,8 +218,8 @@
                         <label for="name">Full Name</label>
                             <input 
                             type="text" 
-                            id="name" 
-                            name="name" 
+                            id="payment-name" 
+                            name="payment-name" 
                             minlength="4" 
                             maxlength="8" 
                             size="10"
