both next and previous btns working

--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
                 <button class="previous hide">Previous</button>
                 <button class="next">Next</button>
                 <!-- PERSONAL DATA -->
-                <form class="personalData step2">
+                <form class="personalData step2 show">
                     <label for="name">Full Name</label>
                         <input 
                         type="text" 
@@ -192,7 +192,7 @@
                     <label for="spam">Receive Hey Captain news and discounts (we won't spam you)</label>
                 </form>
                 <!-- ORDER OVERVIEW -->
-                <div class="orderOverview step3">
+                <div class="orderOverview step3 show">
                     <h5>Your Order</h5>
                     <p class="orderData">Name, email, etc.</p>
                     <p>Hey Captain is based on being social and informative and we look forward to welcoming you
@@ -212,7 +212,7 @@
                     <label for="terms">I have read and accept the terms</label>
                 </div>
                 <!-- PAYMENT -->
-                <form class="payment step4">
+                <form class="payment step4 show">
                     <div id="billing">
                     <h5 class="billingInfo">Billing info</h5>
                         <label for="name">Full Name</label>
@@ -291,7 +291,7 @@
                     </div>
                 </form>
                 <!-- RECEIPT -->
-                <div class="receipt step5">
+                <div class="receipt step5 show">
                     <h5>Payment complete!</h5>
                     <p>We've sent you an email with all the details of your order</p>
                     <h5>Order Number: #1</h5>
