keywords added to each trip when clicked

--- a/index.html
+++ b/index.html
@@ -112,11 +112,17 @@
                         name="tour" 
                         id="tour-select" 
                         required>
+                            <option value=""></option>
                             <option value="landmarks">The Landmarks (1h)</option>
                             <option value="hidden-gems">Hidden Gems (2h)</option>
                             <option value="diana">The Diana (5h)</option>
                         </select>
                     </label>
+                    <!-- keywords -->
+                            <p class="landmarks show">Historical sites | Royal Palace | Circle Brid | Black Diamond | Christiania | NOMA | Copenhagen Opera</p>
+                            <p class="hidden-gems show">Danish Lifestyle | Social activities | Design | Architecture</p>
+                            <p class="diana show">Exclusive | Inner Copenhagen | Historic buildings | Lunch | Swimming</p>
+                            
                     <label for="tentacles">Chose passengers (up to 12)
                         <input 
                         type="number" 
