Table trips structure ready

--- a/index.html
+++ b/index.html
@@ -42,9 +42,41 @@
                 <h3 class="duration"></h3>
                 <img src="" alt="" class="tripImg">
                 <p class="tripText"></p>
+                <button class="readMoreTrip">Read more</button>
+                    <div id="summerWinter">
+                        <div id="tableHeader">
+                            <p>Summer</p>
+                            <p>Winter</p>
+                        </div>
+                        <div id="bottle_of_wine">
+                            <p class="summer"></p>
+                            <p class="winter"></p>
+                        </div>
+                        <div id="beer">
+                            <p class="summer"></p>
+                            <p class="winter"></p>
+                        </div>
+                                        <div id="glass_of_wine">
+                                            <p class="summer"></p>
+                                            <p class="winter"></p>
+                                        </div>
+                    </div>
+                <div id="totalPrice">
+                    <p class="publicPrice"></p>
+                    <p class="privatePrice"></p>
+                </div>
             </div>
         </template>
-        <div id="tripArea"></div>
+        <div id="tripSection">
+            <div id="tableGuide">
+                <p>Bottle of wine</p>
+                <p>Glass of wine</p>
+                <p>Beer</p>
+                <p>Public price</p>
+                <p>Private price</p>
+            </div>
+            <div id="tripArea"></div>
+        </div>
     </section>
 
     <section id="tours">
