--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <section id="intro">
         <template class="introTemplate">
             <img src="" alt="" class="banner">
-            <img src="" alt="" class="heroImg">
+            <video class="video-container" src="" preload="auto" autoplay="true" loop="loop" muted="muted"></video>
             <h3 class="introTitle"></h3>
             <p class="introText"></p>
         </template>
