Basic form next working.

--- a/index.html
+++ b/index.html
@@ -73,8 +73,8 @@
             <div id="trip-modal-background">
                 <div id="trip-modal-content">
                     <button class="trip-modal-close">CLOSE</button>
-                    <p class="fullDescription">blabka</p>
-                    <p>blala</p>
+                    <p class="fullDescription"></p>
+                    <p></p>
                 </div>
             </div>
         </template>
@@ -286,7 +286,7 @@
                     <label for="spam">Receive Hey Captain news and discounts (we won't spam you)</label>
                 </form>
                 <!-- ORDER OVERVIEW -->
-                <div class="orderOverview step3 show">
+                <form class="orderOverview step3 show">
                     <h5>Your Order</h5>
                     <p class="orderData">Name, email, etc.</p>
                     <p>Hey Captain is based on being social and informative and we look forward to welcoming you
@@ -305,7 +305,7 @@
                     required>
                     <label for="terms">I have read and accept the terms</label>
                     <p class="error terms-err">Please tick this box in order to proceed</p> 
-                </div>
+                </form>
                 <!-- PAYMENT -->
                 <form class="payment step4 show">
                     <div id="paymentMethod">
