Form basic previous next buttons.

--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
                     <h6>Receipt</h6>
                 </div>
                 <!-- AVAILABILITY -->
-                <form class="availability step1">
+                <form class="availability step1 show">
                     <label for="date">Choose a date
                         <input 
                         type="date" 
