information on trips table corrected

--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@
             <div class="receipt step5 show">
                 <h5>Payment complete!</h5>
                 <p>We've sent you an email with all the details of your order</p>
-                <h5>Order Number: #1</h5>
+                <h5>Order Number: #</h5>
             </div>
 
         </div>
@@ -267,15 +267,27 @@
                         <p>Summer</p>
                         <p>Winter</p>
                     </div>
+                    <div id="lemonade_water">
+                        <p class="summer"></p>
+                        <p class="winter"></p>
+                    </div>
+                    <div id="tea_coffee_chocolate">
+                        <p class="summer"></p>
+                        <p class="winter"></p>
+                    </div>
                     <div id="bottle_of_wine">
                         <p class="summer"></p>
                         <p class="winter"></p>
                     </div>
-                    <div id="beer">
+                    <div id="glass_of_wine">
                         <p class="summer"></p>
                         <p class="winter"></p>
                     </div>
-                    <div id="glass_of_wine">
+                    <div id="glass_of_grog">
+                        <p class="summer"></p>
+                        <p class="winter"></p>
+                    </div>
+                    <div id="beer">
                         <p class="summer"></p>
                         <p class="winter"></p>
                     </div>
@@ -299,7 +311,10 @@
 
         <div id="tripSection">
             <div id="tableGuide">
+                <p>Lemonade / water</p>
+                <p>Tea / coffee / hot chocolate</p>
                 <p>Bottle of wine</p>
+                <p>Glass of grog/mulled wine</p>
                 <p>Glass of wine</p>
                 <p>Beer</p>
                 <p>Public price</p>
