--- a/index.html
+++ b/index.html
@@ -333,8 +333,7 @@
         <div id="corona-modal-background">
             <div id="corona-modal-content">
                 <button class="corona-modal-close">CLOSE</button>
-                <p class="coronaText">blabka</p>
-                <p>blala</p>
+                <p class="coronaText"></p>
             </div>
         </div>
     </section>
