footer styling done

--- a/index.html
+++ b/index.html
@@ -378,6 +378,9 @@
             <p class="contactLink2"></p>
             <!-- follow us/social media -->
             <h5 class="contactTitle4"></h5>
+            <img src="" alt="facebook" class="contactIcon1 socialMediaIcon" />
+            <img src="" alt="instagram" class="contactIcon2 socialMediaIcon" />
+            <img src="" alt="tripAdvisor" class="contactIcon3 socialMediaIcon" />
         </template>    
     </div>
 
