customise your own tour mailto link created

--- a/index.html
+++ b/index.html
@@ -426,6 +426,10 @@
             </div>
             <div id="tripArea"></div>
         </div>
+
+        <div id="customiseYourOwn">
+            <h3>To customise your own private tour <br><a href="mailto:info@heycaptain.dk?subject=Customise your own private tour">Email Us</a></h3>
+        </div>
         
     </section>
     
