added mailto in footer links

--- a/index.html
+++ b/index.html
@@ -482,7 +482,7 @@
             <p class="contactText2"></p>
             <!-- contact us -->
             <h5 class="contactTitle3"></h5>
-            <p class="contactLink1"></p>
+            <a href="mailto:info@heycaptain.dk"><p class="contactLink1"></p></a>
             <p class="contactLink2"></p>
             <!-- follow us/social media -->
             <h5 class="contactTitle4"></h5>
