--- a/index.html
+++ b/index.html
@@ -486,9 +486,9 @@
             <p class="contactLink2"></p>
             <!-- follow us/social media -->
             <h5 class="contactTitle4"></h5>
-            <img src="" alt="facebook" class="contactIcon1 socialMediaIcon" />
-            <img src="" alt="instagram" class="contactIcon2 socialMediaIcon" />
-            <img src="" alt="tripAdvisor" class="contactIcon3 socialMediaIcon" />
+            <a href="https://www.facebook.com/heycaptaincph"><img src="" alt="facebook" class="contactIcon1 socialMediaIcon" /></a>
+            <a href="https://www.instagram.com/heycaptaincph/"><img src="" alt="instagram" class="contactIcon2 socialMediaIcon" /></a>
+            <a href="https://www.tripadvisor.com/Attraction_Review-g189541-d12292724-Reviews-Hey_Captain-Copenhagen_Zealand.html"><img src="" alt="tripAdvisor" class="contactIcon3 socialMediaIcon" /></a>
         </template>    
     </div>
 
