gallery section done

--- a/index.html
+++ b/index.html
@@ -148,12 +148,12 @@
         <div id="payment-modal-content">
             <button class="payment-modal-close">CLOSE</button>
 
-        <div class="row">
+        <div class="paymentRow">
         <div class="col-75">
           <div class="container">
 
             <form class="paymentForm step2 show">
-              <div class="row">
+              <div class="paymentRow">
                 <div class="col-50">
                   <h3>Billing Address</h3>
                   <label for="fname"><i class="fa fa-user"></i> Full Name</label>
@@ -165,7 +165,7 @@
                   <label for="city"><i class="fa fa-institution"></i> City</label>
                   <input type="text" id="city" name="city" placeholder="New York">
       
-                  <div class="row">
+                  <div class="paymentRow">
                     <div class="col-50">
                       <label for="state">State</label>
                       <input type="text" id="state" name="state" placeholder="NY">
@@ -192,7 +192,7 @@
                   <input type="text" id="ccnum" name="cardnumber" placeholder="1111-2222-3333-4444">
                   <label for="expmonth">Exp Month</label>
                   <input type="text" id="expmonth" name="expmonth" placeholder="September">
-                  <div class="row">
+                  <div class="paymentRow">
                     <div class="col-50">
                       <label for="expyear">Exp Year</label>
                       <input type="text" id="expyear" name="expyear" placeholder="2018">
