--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
             pattern="^\+((?:9[679]|8[035789]|6[789]|5[90]|42|3[578]|2[1-689])|9[0-58]|8[1246]|6[0-6]|5[1-8]|4[013-9]|3[0-469]|2[70]|7|1)(?:\W*\d){0,13}\d$"
             required>
             </div>
-            <p class="error phone-err">Fill out your phone number</p>
+            <p class="error phone-err">(+XX) 12345678</p>
             </div>
 
             <button class="toPayment">Book</button>
@@ -277,6 +277,7 @@
 
             <div id="cc">
             <h5 class="ccInfo">Credit card info</h5>
+            
             <div id="oneCell">
                 <div class="formLabel">
               <label for="cardNumber">Card Number</label>
