animation on button + minor table styling

--- a/index.html
+++ b/index.html
@@ -393,7 +393,7 @@
                 <h3 class="duration"></h3>
                 <img src="" alt="" class="tripImg">
                 <p class="tripText"></p>
-                <button class="readMoreTrip">Read more</button>
+                <button class="readMoreTrip"><span>Read more</span></button>
 
                 <div id="summerWinter">
                     <div id="tableHeader">
