newsletter validation set up, not working yet

--- a/index.html
+++ b/index.html
@@ -575,7 +575,7 @@
                         pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,}$"
                         size="30"
                         required>
-                        <p class="error email-err">Please fill out your e-mail address</p>
+                        <p class="error email-err">Fill in your e-mail address</p>
                     </label>
                 </div>
                 <button class="newsletterSubscription">Subscribe</button>
